# RAGforge

./: .env.example  .gitignore  =0.7.2  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt
agents/: augment_query_generated.py
analysis/: doc_cleaner_perfomance.ipynb  hybrid_chunking.ipynb  rag_with_chroma.ipynb  rag_with_pinecone.ipynb
api/: main.py
api/constants/: __init__.py  http_method.py
api/core/: config.py
api/entities/: collection.py
api/routes/: collection.py
api/services/: common_service.py
app/: main.py
app/api/: __init__.py
app/controllers/: collection_controller.py  files_controller.py  questions_controller.py
app/core/: config.py  container.py  database.py  middleware.py
app/models/: __init__.py  collection.py  collections.py  files.py  questions.py
app/pipeline/: pipeline_service.py
app/repositories/: __init__.py  base_repository.py  collection_repository.py  collections_repository.py  files_repository.py  questions_repository.py
app/schema/: base_schema.py  collection_schema.py  file_schema.py  question_schema.py
app/services/: base_service.py  collection_service.py  files_service.py  question_service.py
app/utils/: query_builder.py  random_name_generator.py  schema.py
chroma/: chroma.sqlite3
chroma_data/: chroma.sqlite3
config/: databases.py
documents/1409/: index.faiss  index.pkl
documents/22/: index.faiss  index.pkl
evaluation/: evaluation.ipynb  rag_evaluation_results.csv
migrations/: env.py
rag/embedding/: __init__.py  (+3 more)
src/: app.py  logging_config.py
web/: main.py
(+84 files in other folders)
